Adds chat/authenticate to API doc
