# doc/swagger.json
@@ -693,48 +693,23 @@
                 ]
             }
         },
-        "/chat": {
-            "get": {
-                "description": "Retrieves id for chat session between two users",
-                "tags": [
-                    "chat"
-                ],
-                "parameters": [
-                    {
-                        "in": "body",
-                        "name": "chat_users",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "title": "user_id",
-                                "type": "string"
-                            }
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    }
-                },
-                "security": [
-                    {
-                        "user_token": []
-                    }
-                ]
-            },
+        "/chat/authenticate": {
             "post": {
-                "description": "Create new chat session",
+                "description": "Generates a Layer jwt token for the user",
+                "consumes": [
+                    "application/json",
+                    "application/x-www-form-urlencoded"
+                ],
+                "produces": [
+                    "application/json"
+                ],
                 "parameters": [
                     {
                         "in": "body",
-                        "name": "chat_users",
+                        "required": true,
+                        "name": "LayerAuthReq",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "title": "user_id",
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/LayerAuthReq"
                         }
                     }
                 ],
@@ -743,34 +718,37 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK"
-                    }
-                },
-                "security": [
-                    {
-                        "user_token": []
-                    }
-                ]
-            }
-        },
-        "/chat/{sessionId}": {
-            "delete": {
-                "description": "Remove chat session",
-                "parameters": [
-                    {
-                        "in": "path",
-                        "name": "sessionId",
-                        "description": "ID of session to delete",
-                        "required": true,
-                        "type": "string"
-                    }
-                ],
-                "tags": [
-                    "chat"
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK"
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "title": "AuthResponse",
+                            "required": [
+                                "layer_token"
+                            ],
+                            "properties": {
+                                "layer_token": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid Input",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
+                    },
+                    "401": {
+                        "description": "Authentication error",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
+                    },
+                    "404": {
+                        "description": "No such user",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
                     }
                 },
                 "security": [
@@ -971,6 +949,22 @@
                     "items": {
                         "type": "integer"
                     }
+                }
+            }
+        },
+        "LayerAuthReq": {
+            "type": "object",
+            "required": [
+                "user_id",
+                "nonce"
+            ],
+            "title": "LayerAuthReq",
+            "properties": {
+                "user_id": {
+                    "type": "integer"
+                },
+                "nonce": {
+                    "type": "integer"
                 }
             }
         },
